# canvas

./: .editorconfig  .eslintignore  .eslintrc.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .prettierignore  .taplo.toml  .yarnrc.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README-zh.md  README.md  aarch64.Dockerfile  build.rs  draw-text.js  geometry.js  index.d.ts  index.html  index.js  jammy-armv7.Dockerfile  js-binding.js  llvm-version  load-image.js  loadImage.js  musl.Dockerfile  node-canvas.d.ts  node-canvas.js  package.json  pnpm-lock.yaml  renovate.json  rust-toolchain  rust-toolchain.toml  simple-test.js  test_pattern_memory_leak.js  tsconfig.json
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/: setup-rust.yaml
.github/actions/setup-rust/: action.yaml
.github/workflows/: CI.yaml  auto-merge.yml  bench.yml  cargo-test.yaml  docker.yml  libc++abi.yml  libcxxabi.yml  lint.yml  skia.yaml
__test__/: .gitignore  canvas-class.spec.ts  draw.spec.ts  echarts.spec.ts  filter.spec.ts  gif.spec.ts  global-fonts.spec.ts  hsla-regression.spec.ts  image-data.spec.ts  image-snapshot.ts  image.spec.ts  index.spec.ts  issue-1088-data-url-mime.spec.ts  loadimage.spec.ts  node-canvas-compat.spec.ts  node-canvas-cross-compat.spec.ts  path-constructor.spec.ts  pathkit.spec.ts  pathkit.spec.ts.md  pathkit.spec.ts.snap  pdf-annotations.spec.ts  pdf.spec.ts  regression.spec.ts  shadow-transform.spec.ts  stress-memory-leaks.spec.ts  svg-canvas.spec.ts  svg-canvas.spec.ts.md  svg-canvas.spec.ts.snap  svg.spec.ts  text.spec.ts  to-blob.spec.ts  variable-fonts.spec.ts
__test__/fixtures/: issue-996.avif
__test__/snapshots/: avif-output.avif
benchmark/: bench.ts  gradient.ts  house.ts
cmake/: android-determine.cmake
dev/bench/: data.js
docs/: pdf-annotations.md
e2e/webpack/: README.md  package.json  webpack.config.js
e2e/webpack/src/: index.js
example/: .gitignore  LoopingCircless.json  Merry Christmas.json  anime-girl-quality.js  anime-girl.avif  anime-girl.js  draw-emoji.js  draw-text-preferred-family.js  draw-text-with-baseline.js  draw-text.js  export-svg.js  flat-lottie.json  gradient.js  image-data.js  image.js  lottie-to-video.ts  measure-text.js  path-empty-line-to.js  resize-svg.js  round-path.js  simple.js  tiger.js  tiger.json
npm/android-arm64/: README.md  package.json
npm/darwin/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/icudtl/: README.md  package.json  postinstall.js
npm/linux/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  install.js  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  install.js  package.json
npm/linux-x64-musl/: README.md  install.js  package.json
npm/win32/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: build-c++abi.mjs  build-skia.js  debug-memory.mjs  publish.js  release-skia-binary.js  release-skia-binary.mjs  upload-to-release.js  utils.js  utils.mjs  version.js
scripts/__test__/: utils.spec.ts  utils.spec.ts.md  utils.spec.ts.snap
skia-c/: skia_c.cpp  skia_c.hpp
src/: avif.rs  ctx.rs  error.rs  filter.rs  font.rs  gif.rs  global_fonts.rs  gradient.rs  image.rs  image_pattern.rs  lib.rs  lottie.rs  page_recorder.rs  path.rs  pattern.rs  picture_recorder.rs  sk.rs  state.rs  svg.rs  util.rs
