[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "canvas"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
base64 = "0.22"
cssparser = "0.29"
infer = "0.15"
libavif = { version = "0.13", default-features = false, features = [
  "codec-aom",
] }
napi = { version = "2", default-features = false, features = [
  "napi3",
  "serde-json",
] }
napi-derive = { version = "2", default-features = false }
nom = "7"
num_cpus = "1"
once_cell = "1"
regex = "1"
rgb = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
thiserror = "1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc = "0.1"

[target.'cfg(all(target_os = "linux", not(target_arch = "arm")))'.dependencies]
mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }

[build-dependencies]
cc         = "1"
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
